@@ -41,7 +41,7 @@ function wesnoth.micro_ais.protect_unit(cfg)
 			aspect = "attacks",
 			facet = {
 				name = "ai_default_rca::aspect_attacks",
-				id = "dont_attack",
+				id = "mai_protect_" .. cfg.ca_id .. "_dont_attack",
 				invalidate_on_gamestate_change = "yes",
 				{ "filter_own", {
 					{ "not", {
